manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-api-service
spec:
  selector:
    app: signal-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
